2007-09-10  Mitz Pettel  <mitz@webkit.org>

Reviewed by Maciej Stachowiak.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15157
          Image defined in background-position: top center gets unexpectedly truncated
          <rdar://problem/5469095>

        Test: fast/repaint/body-background-image.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::imageChanged): Refined the logic for when the root takes
        over painting the background, to match paintBoxDecorations(). In particular,
        if the root has defined a background, the body should paint its own background.

2007-09-10  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Maciej Stachowiak.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=15157
          Image defined in background-position: top center gets unexpectedly truncated
          <rdar://problem/5469095>

        * fast/repaint/body-background-image.html: Added.
        * platform/mac/fast/repaint/body-background-image-expected.checksum: Added.
        * platform/mac/fast/repaint/body-background-image-expected.png: Added.
        * platform/mac/fast/repaint/body-background-image-expected.txt: Added.


Canonical link: https://commits.webkit.org/19958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25487 268f45cc-cd09-0410-ab3c-d52691b4dbfc